Fix layout issues on small screens (drawer paddings, page header).

--- a/src/components/Drawer/index.less
+++ b/src/components/Drawer/index.less
@@ -61,6 +61,17 @@
   }
 }
 
+@media (max-width: 768px) {
+  .ant-drawer {
+    .ant-drawer-header,
+    .ant-drawer-body,
+    .ant-drawer-footer {
+      padding-left: 8px;
+      padding-right: 8px;
+    }
+  }
+}
+
 .rtl {
   .ant-drawer .ant-drawer-actions > button:first-child {
     margin-left: @margin-xs;
